--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "tsx": "^4.19.2",
     "vaul": "^1.1.1",
     "wouter": "^3.3.5",
+    "ws": "^8.18.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0",
     "vite": "^5.4.10",
@@ -82,7 +83,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@tailwindcss/typography": "^0.5.15"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -93,6 +95,7 @@
     "@types/node": "^22.8.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/ws": "^8.5.13",
     "drizzle-kit": "^0.28.1"
   }
 }
