--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@neondatabase/serverless": "^0.10.4",
+    "pg": "^8.12.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -75,7 +75,7 @@
     "tsx": "^4.19.2",
     "vaul": "^1.1.1",
     "wouter": "^3.3.5",
-    "ws": "^8.18.0",
+
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0",
     "vite": "^5.4.10",
@@ -96,6 +96,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
+    "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.28.1"
   }
 }
