--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build --outDir client/dist",
-    "start": "node migrate-render.js && NODE_ENV=production tsx server/render-index.ts",
+    "start": "node migrate-render.mjs && NODE_ENV=production tsx server/render-index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
