--- a/package.json
+++ b/package.json
@@ -1,102 +1,121 @@
 {
   "name": "cartao-vidah",
-  "version": "1.0.0",
+  "private": true,
   "type": "module",
-  "license": "MIT",
+  "version": "1.0.0",
+  "main": "server/render-index-final.ts",
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build --outDir client/dist",
-    "start": "npm run build && NODE_ENV=production tsx server/render-index.ts",
+    "start": "npm run build && NODE_ENV=production tsx server/render-index-final.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "pg": "^8.12.0",
-    "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-alert-dialog": "^1.1.7",
-    "@radix-ui/react-aspect-ratio": "^1.1.3",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-collapsible": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.7",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-hover-card": "^1.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-menubar": "^1.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-scroll-area": "^1.1.3",
-    "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slider": "^1.2.4",
-    "@radix-ui/react-slot": "^1.1.3",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toast": "^1.2.7",
-    "@radix-ui/react-toggle": "^1.1.3",
-    "@radix-ui/react-toggle-group": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@tanstack/react-query": "^5.59.20",
-    "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.36.4",
-    "drizzle-zod": "^0.5.1",
-    "embla-carousel-react": "^8.3.0",
-    "express": "^4.21.1",
-    "express-rate-limit": "^7.4.1",
-    "express-validator": "^7.2.0",
-    "framer-motion": "^11.11.17",
-    "helmet": "^8.0.0",
-    "input-otp": "^1.4.1",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.453.0",
-    "next-themes": "^0.4.3",
-    "react": "^18.3.1",
-    "react-day-picker": "^9.2.2",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
-    "react-icons": "^5.3.0",
-    "react-resizable-panels": "^2.1.4",
-    "recharts": "^2.13.3",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.2",
-    "vaul": "^1.1.1",
-    "wouter": "^3.3.5",
-
-    "zod": "^3.23.8",
-    "zod-validation-error": "^3.4.0",
-    "vite": "^5.4.10",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "@tailwindcss/typography": "^0.5.15"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.8.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/ws": "^8.5.13",
-    "@types/pg": "^8.11.10",
-    "drizzle-kit": "^0.28.1"
+    "@hookform/resolvers": "latest",
+    "@jridgewell/trace-mapping": "latest",
+    "@neondatabase/serverless": "latest",
+    "@radix-ui/react-accordion": "latest",
+    "@radix-ui/react-alert-dialog": "latest",
+    "@radix-ui/react-aspect-ratio": "latest",
+    "@radix-ui/react-avatar": "latest",
+    "@radix-ui/react-checkbox": "latest",
+    "@radix-ui/react-collapsible": "latest",
+    "@radix-ui/react-context-menu": "latest",
+    "@radix-ui/react-dialog": "latest",
+    "@radix-ui/react-dropdown-menu": "latest",
+    "@radix-ui/react-hover-card": "latest",
+    "@radix-ui/react-label": "latest",
+    "@radix-ui/react-menubar": "latest",
+    "@radix-ui/react-navigation-menu": "latest",
+    "@radix-ui/react-popover": "latest",
+    "@radix-ui/react-progress": "latest",
+    "@radix-ui/react-radio-group": "latest",
+    "@radix-ui/react-scroll-area": "latest",
+    "@radix-ui/react-select": "latest",
+    "@radix-ui/react-separator": "latest",
+    "@radix-ui/react-slider": "latest",
+    "@radix-ui/react-slot": "latest",
+    "@radix-ui/react-switch": "latest",
+    "@radix-ui/react-tabs": "latest",
+    "@radix-ui/react-toast": "latest",
+    "@radix-ui/react-toggle": "latest",
+    "@radix-ui/react-toggle-group": "latest",
+    "@radix-ui/react-tooltip": "latest",
+    "@replit/vite-plugin-cartographer": "latest",
+    "@replit/vite-plugin-runtime-error-modal": "latest",
+    "@tailwindcss/typography": "latest",
+    "@tailwindcss/vite": "latest",
+    "@tanstack/react-query": "latest",
+    "@types/bcrypt": "latest",
+    "@types/compression": "latest",
+    "@types/connect-pg-simple": "latest",
+    "@types/cors": "latest",
+    "@types/express": "latest",
+    "@types/express-session": "latest",
+    "@types/jsonwebtoken": "latest",
+    "@types/memoizee": "latest",
+    "@types/morgan": "latest",
+    "@types/node": "latest",
+    "@types/passport": "latest",
+    "@types/passport-local": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/ws": "latest",
+    "@vitejs/plugin-react": "latest",
+    "autoprefixer": "latest",
+    "bcrypt": "latest",
+    "class-variance-authority": "latest",
+    "clsx": "latest",
+    "cmdk": "latest",
+    "compression": "latest",
+    "connect-pg-simple": "latest",
+    "cors": "latest",
+    "date-fns": "latest",
+    "drizzle-kit": "latest",
+    "drizzle-orm": "latest",
+    "drizzle-zod": "latest",
+    "embla-carousel-react": "latest",
+    "esbuild": "latest",
+    "express": "latest",
+    "express-rate-limit": "latest",
+    "express-session": "latest",
+    "express-validator": "latest",
+    "framer-motion": "latest",
+    "helmet": "latest",
+    "input-otp": "latest",
+    "jsonwebtoken": "latest",
+    "lucide-react": "latest",
+    "memoizee": "latest",
+    "memorystore": "latest",
+    "morgan": "latest",
+    "next-themes": "latest",
+    "openid-client": "latest",
+    "passport": "latest",
+    "passport-local": "latest",
+    "pg": "latest",
+    "postcss": "latest",
+    "react": "latest",
+    "react-day-picker": "latest",
+    "react-dom": "latest",
+    "react-hook-form": "latest",
+    "react-icons": "latest",
+    "react-resizable-panels": "latest",
+    "recharts": "latest",
+    "tailwind-merge": "latest",
+    "tailwindcss": "latest",
+    "tailwindcss-animate": "latest",
+    "tsx": "latest",
+    "tw-animate-css": "latest",
+    "typescript": "latest",
+    "vaul": "latest",
+    "vite": "latest",
+    "wouter": "latest",
+    "ws": "latest",
+    "zod": "latest",
+    "zod-validation-error": "latest"
   }
 }
