--- a/package.json
+++ b/package.json
@@ -1,122 +1,69 @@
 {
   "name": "cartao-vidah",
   "private": true,
-  "type": "module",
   "version": "1.0.0",
-  "main": "server/render-index-final.ts",
+  "main": "server/render-index.ts",
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build --outDir client/dist",
-    "start": "npm run build && NODE_ENV=production tsx server/render-index-final.ts",
+    "start": "npm run build && NODE_ENV=production tsx server/render-index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@hookform/resolvers": "latest",
-    "@jridgewell/trace-mapping": "latest",
-    "@neondatabase/serverless": "latest",
-    "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-alert-dialog": "latest",
-    "@radix-ui/react-aspect-ratio": "latest",
-    "@radix-ui/react-avatar": "latest",
-    "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-collapsible": "latest",
-    "@radix-ui/react-context-menu": "latest",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "latest",
-    "@radix-ui/react-hover-card": "latest",
-    "@radix-ui/react-label": "latest",
-    "@radix-ui/react-menubar": "latest",
-    "@radix-ui/react-navigation-menu": "latest",
-    "@radix-ui/react-popover": "latest",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-slot": "latest",
-    "@radix-ui/react-switch": "latest",
-    "@radix-ui/react-tabs": "latest",
-    "@radix-ui/react-toast": "latest",
-    "@radix-ui/react-toggle": "latest",
-    "@radix-ui/react-toggle-group": "latest",
-    "@radix-ui/react-tooltip": "latest",
-    "@replit/vite-plugin-cartographer": "latest",
-    "@replit/vite-plugin-runtime-error-modal": "latest",
-    "@tailwindcss/typography": "latest",
-    "@tailwindcss/postcss": "latest",
-    "@tailwindcss/vite": "latest",
-    "@tanstack/react-query": "latest",
-    "@types/bcrypt": "latest",
-    "@types/compression": "latest",
-    "@types/connect-pg-simple": "latest",
-    "@types/cors": "latest",
-    "@types/express": "latest",
-    "@types/express-session": "latest",
-    "@types/jsonwebtoken": "latest",
-    "@types/memoizee": "latest",
-    "@types/morgan": "latest",
-    "@types/node": "latest",
-    "@types/passport": "latest",
-    "@types/passport-local": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/ws": "latest",
-    "@vitejs/plugin-react": "latest",
-    "autoprefixer": "latest",
-    "bcrypt": "latest",
-    "class-variance-authority": "latest",
-    "clsx": "latest",
-    "cmdk": "latest",
-    "compression": "latest",
-    "connect-pg-simple": "latest",
-    "cors": "latest",
-    "date-fns": "latest",
-    "drizzle-kit": "latest",
-    "drizzle-orm": "latest",
-    "drizzle-zod": "latest",
-    "embla-carousel-react": "latest",
-    "esbuild": "latest",
-    "express": "latest",
-    "express-rate-limit": "latest",
-    "express-session": "latest",
-    "express-validator": "latest",
-    "framer-motion": "latest",
-    "helmet": "latest",
-    "input-otp": "latest",
-    "jsonwebtoken": "latest",
-    "lucide-react": "latest",
-    "memoizee": "latest",
-    "memorystore": "latest",
-    "morgan": "latest",
-    "next-themes": "latest",
-    "openid-client": "latest",
-    "passport": "latest",
-    "passport-local": "latest",
-    "pg": "latest",
-    "postcss": "latest",
-    "react": "latest",
-    "react-day-picker": "latest",
-    "react-dom": "latest",
-    "react-hook-form": "latest",
-    "react-icons": "latest",
-    "react-resizable-panels": "latest",
-    "recharts": "latest",
-    "tailwind-merge": "latest",
-    "tailwindcss": "latest",
-    "tailwindcss-animate": "latest",
-    "tsx": "latest",
-    "tw-animate-css": "latest",
-    "typescript": "latest",
-    "vaul": "latest",
-    "vite": "latest",
-    "wouter": "latest",
-    "ws": "latest",
-    "zod": "latest",
-    "zod-validation-error": "latest"
+    "@hookform/resolvers": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "drizzle-kit": "^0.20.0",
+    "drizzle-orm": "^0.29.0",
+    "drizzle-zod": "^0.5.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "framer-motion": "^10.16.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.294.0",
+    "pg": "^8.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
+    "react-icons": "^4.11.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "wouter": "^3.0.0",
+    "zod": "^3.22.0"
   }
 }
